<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "Recharge2Me">]>

<resources>
    <string name="app_name" translatable="false">&appname;</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="item" translatable="false">Item</string>
    <string name="user" translatable="false">user</string>
    <string name="forgot_password" translatable="false">Forgot Password?</string>
    <string name="enter_the_email_address" translatable="false">Enter the email address</string>
    <string name="associated_with_your_account" translatable="false">associated with your account.</string>
    <string name="your_password" translatable="false">your password</string>
    <string name="we_will_email_you_a_link_to_reset" translatable="false">we will email you a link to reset</string>
    <string name="enter_email_address" translatable="false">Enter email address</string>
    <string name="send_reset_link" translatable="false">Send Reset Link</string>
    <string name="enter_mobile_number" translatable="false">Enter Mobile Number</string>

    // RechApi
    <string name="token" translatable="false">rQYwTkpTDVkurPtyGQc7oD7CUaoGbA</string>
    <string name="baseUrl_rechApi" translatable="false">http://api.rechapi.com/</string>
    <string name="login_or_create_account" translatable="false">You need to Login or create an account</string>
    <string name="hello" translatable="false">Hello</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="full_name" translatable="false">Full name</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="log_in" translatable="false">Log in</string>
    <string name="create_account" translatable="false">Create Account</string>
    <string name="browse_plans" translatable="false">Browse Plans</string>
    <string name="something_went_wrong" translatable="false">Something went wrong, Please try again later</string>
    <string name="special_offer">Special Offer!</string>
    <string name="mobile_recharge_cashback">Flat 2% cashback on\nevery mobile recharge</string>
    <string name="recharge_bill_payments"><![CDATA[Recharge & Bill Payments]]></string>
    <string name="dth_nrecharge">Dth\nRecharge</string>
    <string name="mobile_npostpaid">Mobile\nPostpaid</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="recent">Recent</string>
    <string name="dummy_name">Mudssir Ahmed</string>
    <string name="dummy_number">8477055724</string>
    <string name="all_contacts">All Contacts</string>
    <string name="contact_permission">Please grant contact permission</string>

    <string-array name="circle">
        <item>Andhra Pradesh</item>
        <item>Assam</item>
        <item>Bihar &amp; Jharkhand</item>
        <item>Chennai</item>
        <item>Delhi NCR</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu &amp; Kashmir</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Kolkata</item>
        <item>Madhya Pradesh Chhattisgarh</item>
        <item>Maharashtra</item>
        <item>Mumbai</item>
        <item>North East</item>
        <item>Orissa</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Tamil Nadu</item>
        <item>UP East</item>
        <item>UP West Uttrakhand</item>
        <item>West Bengal</item>
    </string-array>

    <string-array name="operator">
        <item>Idea</item>
        <item>Vodafone</item>
        <item>Airtel</item>
        <item>Reliance Jio</item>
        <item>BSNL</item>
    </string-array>

    <string-array name="states">
        <item>Delhi/NCR</item>
        <item>Mumbai</item>
        <item>Kolkata</item>
        <item>Maharashtra</item>
        <item>Andhra Pradesh</item>
        <item>Tamil Nadu</item>
        <item>Karnataka</item>
        <item>Gujarat</item>
        <item>Uttar Pradesh(E)</item>
        <item>Madhya Pradesh</item>
        <item>Uttar Pradesh(W)</item>
        <item>West Bengal</item>
        <item>Rajasthan</item>
        <item>Kerala</item>
        <item>Punjab</item>
        <item>Haryana</item>
        <item>Bihar &amp; Jharkhand</item>
        <item>Orissa</item>
        <item>Assam</item>
        <item>North East</item>
        <item>Himachal Pradesh</item>
        <item>Jammu &amp; Kashmir</item>
        <item>Chennai</item>
    </string-array>

</resources>