<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forgot_backgorund_gradient"
    tools:context="LogInSignIn_Entry.Forgot_Password">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textColor="@color/whiteText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/user"
        android:src="@drawable/forgot_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/forgot_container"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/comfortaa_regular"
            android:gravity="center_horizontal"
            android:text="@string/enter_the_email_address"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/comfortaa_regular"
            android:gravity="center_horizontal"
            android:text="@string/associated_with_your_account"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/comfortaa_light"
            android:gravity="center_horizontal"
            android:text="@string/your_password"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/comfortaa_light"
            android:gravity="center_horizontal"
            android:text="@string/we_will_email_you_a_link_to_reset"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_forgot_email"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:background="@drawable/et_enteremail"
            android:ems="10"
            android:fontFamily="@font/comfortaa_regular"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_forgot_warningText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="37dp"
            android:fontFamily="@font/comfortaa_regular"
            android:paddingLeft="10dp"
            android:textColor="@color/Warning_text"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_forgot_sendLink"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_forgot"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/send_reset_link"
            android:textAllCaps="false"
            android:textColor="@color/whiteText"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>