<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ns_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".home.ui.fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_gradient"
                android:layout_marginBottom="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.recharge2mePlay.recharge2me.utils.MontserratSemiBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="45dp"
                    android:textSize="25sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    android:background="@drawable/round_8">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/rewards"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginVertical="@dimen/dimen_15dp"/>

                    <com.recharge2mePlay.recharge2me.utils.MontserratSemiBoldTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:layout_gravity="center_vertical"
                        tools:text="Total Rewards Earned: ₹850"
                        android:layout_marginHorizontal="@dimen/dimen_16dp"
                        android:textColor="@color/black_color_80"
                        android:textSize="14sp"/>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginHorizontal="@dimen/dimen_20dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/special_offer"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dimen_16dp">

                <com.recharge2mePlay.recharge2me.utils.MontserratSemiBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/special_offer"
                    android:textAllCaps="true"
                    android:textColor="@color/black_color_90"
                    android:textSize="@dimen/dimen_16sp"/>

                <com.recharge2mePlay.recharge2me.utils.MontserratMediumTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_recharge_cashback"
                    android:textColor="@color/black_color_80"
                    android:textSize="@dimen/dimen_12sp"/>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/round_4"
            android:layout_marginHorizontal="@dimen/dimen_20dp"
            android:orientation="vertical">

            <com.recharge2mePlay.recharge2me.utils.MontserratSemiBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recharge_bill_payments"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:textColor="@color/black_color_80"
                android:textSize="@dimen/dimen_16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_16dp"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/llPrePaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/mobile"/>

                    <com.recharge2mePlay.recharge2me.utils.MontserratSemiBoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mobile\nPrepaid"
                        android:textAlignment="center"
                        android:layout_marginTop="@dimen/dimen_16dp"
                        android:textColor="@color/black_color_80"
                        android:textSize="@dimen/dimen_10sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPostPaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/mobile"/>

                    <com.recharge2mePlay.recharge2me.utils.MontserratSemiBoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_npostpaid"
                        android:textAlignment="center"
                        android:layout_marginTop="@dimen/dimen_16dp"
                        android:textColor="@color/black_color_80"
                        android:textSize="@dimen/dimen_10sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDthRecharge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/mobile"/>

                    <com.recharge2mePlay.recharge2me.utils.MontserratSemiBoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dth_nrecharge"
                        android:textAlignment="center"
                        android:layout_marginTop="@dimen/dimen_16dp"
                        android:textColor="@color/black_color_80"
                        android:textSize="@dimen/dimen_10sp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginHorizontal="@dimen/dimen_20dp">

            <com.recharge2mePlay.recharge2me.utils.MontserratSemiBoldTextView
                android:id="@+id/tv_Home_Transactions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent_transactions"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:textColor="@color/black_color_80"
                android:textSize="@dimen/dimen_18sp" />

            <ProgressBar
                android:id="@+id/pb_uiHome_transactions"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminateOnly="true"
                android:indeterminateTint="@color/colorPrimaryDark" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_transaction"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>